{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "0f1d38f7-c531-418c-a4e8-209153faf3c4",
            "actions": [
                {
                    "name": "Mouse",
                    "type": "Button",
                    "id": "d542cb01-28ab-433e-a265-ea22fc483a20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d943f4e4-636a-4f61-8959-c36b0f1c64a1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "NumberPad",
            "id": "d2192b4e-f012-4aa5-8e3b-a242918751c4",
            "actions": [
                {
                    "name": "1",
                    "type": "Button",
                    "id": "7d44e501-9c1d-4a9e-87b7-97ecdccdea53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "2",
                    "type": "Button",
                    "id": "236ac4a5-d227-4c47-ae89-f2ef8070a527",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "3",
                    "type": "Button",
                    "id": "c21fbd91-3519-4813-a708-91553d93aeeb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse",
                    "type": "Button",
                    "id": "3cc6adc6-dfa9-4e3b-9908-70fc3d7cbd41",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RMouse",
                    "type": "Button",
                    "id": "60323a61-fe8e-46d7-bb85-585acafc837e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "5fd5f2e1-394c-47cc-b8c2-a1139021d972",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "31fb131f-ec85-4a0e-a4a0-098d3df717f1",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2d8f5f9-3e43-4bb7-8615-e6660935b0b1",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6528f1d7-05db-4ba6-bc3a-752f8d139032",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75b70baf-b8b2-4095-8c0c-bc12b05d09e1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19c76125-febd-416a-b676-44ae798dac70",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14e8855e-1f78-4e6b-b936-379943005e8f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameManager",
            "id": "5c9c0fb4-eaf3-4c26-8a0a-9c7e3b177686",
            "actions": [
                {
                    "name": "Esc",
                    "type": "Button",
                    "id": "7d9c8636-0e91-4338-a7a9-c4f143efe793",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f25dda6c-a284-48b9-b3a8-e8f5246f0ea4",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Esc",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ResultUI",
            "id": "db801083-dced-4204-8370-fd7323750ed6",
            "actions": [
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "2654f8c3-8717-4c17-9657-54d020322061",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "706d683a-f212-4d8f-828e-fb0eed547988",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "299d7a87-eaa0-46b4-aa95-9cda43be1d8c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edab4756-3c49-48a5-9b20-49dbe13ae897",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KM",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PressAnything",
            "id": "760a0343-aa25-4d91-9b0d-1ea782df7770",
            "actions": [
                {
                    "name": "AnyThing",
                    "type": "Button",
                    "id": "74081226-514e-4312-b08e-18b6a84719d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "884651f1-644e-4ee7-ab80-0210dc644765",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnyThing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9991d5f9-194c-457c-b4df-2cf3a6536cb1",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AnyThing",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KM",
            "bindingGroup": "KM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}